# goit_homework_M2T6

./: README.md  connect.py  create.py  insert.py  pyproject.toml  select.py
